RESOLVED FIXED287444
[WebGPU] Ensure infinite loops will always terminate at some point
https://bugs.webkit.org/show_bug.cgi?id=287444
Summary [WebGPU] Ensure infinite loops will always terminate at some point
Mike Wyrzykowski
Reported 2025-02-10 16:26:53 PST
[WebGPU] Ensure infinite loops will always terminate at some point
Attachments
Mike Wyrzykowski
Comment 1 2025-02-10 16:27:10 PST
Mike Wyrzykowski
Comment 2 2025-02-10 16:36:29 PST
EWS
Comment 3 2025-02-11 10:35:09 PST
Committed 290221@main (7eb2a7eaa92a): <https://commits.webkit.org/290221@main> Reviewed commits have been landed. Closing PR #40379 and removing active labels.
EWS
Comment 4 2025-02-14 11:07:07 PST
Committed 289651.116@safari-7621-branch (fae113346f3e): <https://commits.webkit.org/289651.116@safari-7621-branch> Reviewed commits have been landed. Closing PR #2599 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.