[WebGPU] Ensure infinite loops will always terminate at some point https://bugs.webkit.org/show_bug.cgi?id=287444 rdar://144542249

Reviewed by Tadeu Zagallo.

Setting a volatile variable to true inside a loop does not seem
to be sufficient to prevent optimizations from MTLCompiler service.

Instead, terminate after 2^32 - 1 iterations of any loop. More likely,
the loop will get terminated due to the fragment execution taking
too long instead.

* LayoutTests/fast/webgpu/nocrash/fuzz-287444-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-287444.html: Added.
Add regression test.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):
Switch from bool -> uint32_t

Canonical link: https://commits.webkit.org/290221@main