Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp
@@ -45,6 +45,9 @@ namespace WGSL {
 
 namespace Metal {
 
+#define DECLARE_FORWARD_PROGRESS "volatile uint32_t __wgslEnsureForwardProgress = 0; if (!__wgslEnsureForwardProgress)"
+#define CHECK_FORWARD_PROGRESS "if (++__wgslEnsureForwardProgress == 4294967295u) break;"
+
 class FunctionDefinitionWriter : public AST::Visitor {
 public:
     FunctionDefinitionWriter(ShaderModule& shaderModule, StringBuilder& stringBuilder, PrepareResult& prepareResult, const HashMap<String, ConstantValue>& constantValues)
@@ -2440,7 +2443,7 @@ void FunctionDefinitionWriter::visit(AST::ReturnStatement& statement)
 
 void FunctionDefinitionWriter::visit(AST::ForStatement& statement)
 {
-    m_stringBuilder.append("{ volatile bool __wgslEnsureForwardProgress = true; if (__wgslEnsureForwardProgress) for ("_s);
+    m_stringBuilder.append("{ " DECLARE_FORWARD_PROGRESS " for ("_s);
     if (auto* initializer = statement.maybeInitializer())
         visit(*initializer);
     m_stringBuilder.append(';');
@@ -2453,7 +2456,7 @@ void FunctionDefinitionWriter::visit(AST::ForStatement& statement)
         m_stringBuilder.append(' ');
         visit(*update);
     }
-    m_stringBuilder.append(") { __wgslEnsureForwardProgress = true; "_s);
+    m_stringBuilder.append(") { " CHECK_FORWARD_PROGRESS " "_s);
     visit(statement.body());
     m_stringBuilder.append('}');
     m_stringBuilder.append('}');
@@ -2461,7 +2464,7 @@ void FunctionDefinitionWriter::visit(AST::ForStatement& statement)
 
 void FunctionDefinitionWriter::visit(AST::LoopStatement& statement)
 {
-    m_stringBuilder.append("{ volatile bool __wgslEnsureForwardProgress = true; if (__wgslEnsureForwardProgress) while (true) { __wgslEnsureForwardProgress = true; \n"_s);
+    m_stringBuilder.append("{ " DECLARE_FORWARD_PROGRESS " while (true) { " CHECK_FORWARD_PROGRESS " \n"_s);
     {
         if (statement.containsSwitch())
             m_stringBuilder.append("bool __continuing = false;\n"_s, m_indent);
@@ -2504,9 +2507,9 @@ void FunctionDefinitionWriter::visit(AST::Continuing& continuing)
 
 void FunctionDefinitionWriter::visit(AST::WhileStatement& statement)
 {
-    m_stringBuilder.append("{ volatile bool __wgslEnsureForwardProgress = true; if (__wgslEnsureForwardProgress) while ("_s);
+    m_stringBuilder.append("{ " DECLARE_FORWARD_PROGRESS " while ("_s);
     visit(statement.test());
-    m_stringBuilder.append(") { __wgslEnsureForwardProgress = true; "_s);
+    m_stringBuilder.append(") { " CHECK_FORWARD_PROGRESS " "_s);
     visit(statement.body());
     m_stringBuilder.append('}');
     m_stringBuilder.append('}');
@@ -2726,6 +2729,9 @@ void emitMetalFunctions(StringBuilder& stringBuilder, ShaderModule& shaderModule
     FunctionDefinitionWriter functionDefinitionWriter(shaderModule, stringBuilder, prepareResult, constantValues);
     functionDefinitionWriter.write();
 }
+
+#undef DECLARE_FORWARD_PROGRESS
+#undef CHECK_FORWARD_PROGRESS
 
 } // namespace Metal
 } // namespace WGSL
